# Gluon-v2-release

./: .gitignore  README.md
examples/: demo_workflow.json
extension/: .gitignore  COMMIT_MESSAGE.txt  MIGRATION_CHECKLIST.md  QUICKSTART_TESTING.md  README.md  TESTING_GUIDE.md  WORKFLOW_MIGRATION_V1_TO_V2.md  jest.config.js  manifest.json  package-lock.json  package.json
extension/tests/: README.md  setup.js
gluon-desktop/: package-lock.json  package.json
gluon-desktop/src/: 80s-theme.css  applySystem.css  applySystemSettings.js  applySystemUI.js  command-center.html  index.html  main.js  styles.css
gluon-desktop/src-tauri/: .gitignore  Cargo.toml  GLUON_V2_IMPLEMENTATION_REPORT.md  TESTING_GUIDE.md  TUNING_REPORT_v2.md  build.rs  tauri.conf.json  test_your_gprotocol.py
gluon-desktop/src-tauri/benches/: matcher_benchmarks.rs
gluon-desktop/src-tauri/capabilities/: default.json
gluon-desktop/src-tauri/examples/: test_tree_sitter_decorators.rs
gluon-desktop/src-tauri/migrations/: 001_initial_setup.sql  002_add_download_path.sql  003_project_exclusions.sql  004_project_download_paths.sql  005_add_language_to_environments.sql  006_project_extensions.sql  007_add_ini_to_extensions.sql  008_create_ai_chat_tables.sql  009_add_xsd_wsdl_extensions.sql  010_vector_maps.sql
gluon-desktop/src-tauri/src/: editor_bridge.rs  lib.rs  main.rs  simulation_test.rs  vector_map_commands.rs
gluon-desktop/src-tauri/src/ai_chat/: commands.rs  keyring.rs  mod.rs  state.rs
gluon-desktop/src-tauri/src/ai_chat/providers/: claude.rs  gemini.rs  mod.rs  vscode.rs
gluon-desktop/src-tauri/src/apply_system/: config.rs  logging.rs  mod.rs  offline_mode.rs  preset_library.rs  protocol.rs  rate_limiter.rs  snapshot.rs  tauri_commands.rs  types.rs
gluon-desktop/src-tauri/src/apply_system/analysis/: engine.rs  languages.rs  mod.rs  queries.rs  simulation.rs  validation.rs
gluon-desktop/src-tauri/src/apply_system/context/: graph.rs  mod.rs  ranker.rs  repo_map.rs  symbol_extractor.rs
gluon-desktop/src-tauri/src/apply_system/core/: mod.rs  self_healing.rs  transaction.rs
gluon-desktop/src-tauri/src/apply_system/extraction/: html_parser.rs
gluon-desktop/src-tauri/src/apply_system/features/: backup_system.rs  code_quality_analyzer.rs  debug_manager.rs  integrity_auditor.rs  mod.rs  prompts.rs  snapshot.rs
gluon-desktop/src-tauri/src/apply_system/lazy/: detector.rs  engine.rs  integration_tests.rs  matcher.rs  mod.rs  reconstructor.rs  safety.rs  structural_matcher.rs  weighted_anchoring.rs
gluon-desktop/src-tauri/src/apply_system/matchers/: anchor_extraction.rs  anchor_matcher.rs  block_matcher.rs  coordinator.rs  fuzzy_matcher.rs  mod.rs  regex_matcher.rs  utils.rs  weighted_anchor_matcher.rs
gluon-desktop/src-tauri/src/apply_system/parsers/: coordinator.rs  git_style_search_replace.rs  indentation_normalizer.rs  lazy_stitcher.rs  markdown.rs  mod.rs  pattern_matching.rs  regression_report.rs  regression_tests.rs  search_replace.rs  unified_diff.rs  xml_gprotocol.rs
gluon-desktop/src-tauri/src/apply_system/shared/: config.rs  logging.rs  mod.rs  protocol.rs  types.rs
gluon-desktop/src-tauri/src/apply_system/validators/: batch_validator.rs  mod.rs  syntax_validator.rs
gluon-desktop/src-tauri/src/engine/: mod.rs
gluon-desktop/src-tauri/src/engine/concurrency/: fork_join.rs  mod.rs
gluon-desktop/src-tauri/src/engine/execution/: context.rs  control_flow.rs  executor.rs  mod.rs  safety.rs
gluon-desktop/src-tauri/src/engine/graph/: edge.rs  graph.rs  mod.rs  node.rs
gluon-desktop/src-tauri/src/engine/memory/: blackboard.rs  budget.rs  mod.rs
gluon-desktop/src-tauri/src/engine/nodes/: action_node.rs  agent_node.rs  logic_node.rs  mod.rs
gluon-desktop/src-tauri/src/engine/persistence/: checkpoint.rs  mod.rs  resume.rs  storage.rs
gluon-desktop/src-tauri/src/google/: google_auth.rs  google_drive.rs  mod.rs
gluon-desktop/src-tauri/src/interface/: executor.rs  mod.rs  protocol.rs  registry.rs  safety.rs  tauri_commands.rs  types.rs
gluon-desktop/src-tauri/src/interface/mcp/: client.rs  mapper.rs  mod.rs  server.rs  transport.rs
gluon-desktop/src-tauri/src/interface/tools/: apply_patch.rs  get_manifest.rs  mod.rs  read_file.rs  remote_tool.rs  run_command.rs  search_code.rs  write_file.rs
gluon-desktop/src-tauri/src/local_ai/: agentic_rag.rs  mod.rs  rag_engine.rs  semantic_chunking.rs  service_manager.rs  vector_map_manager.rs
gluon-desktop/src-tauri/src/memory/: embedding_provider.rs  file_watcher.rs  git_tracker.rs  mod.rs  smart_chunker.rs  store.rs  tantivy_store.rs  types.rs
gluon-desktop/src-tauri/src/sensors/: driver.rs  mod.rs  sniffer.rs  tauri_commands.rs  types.rs  visual.rs
gluon-desktop/src-tauri/src/ui/: commands.rs  events.rs  mod.rs  state_sync.rs  terminal.rs
gluon-desktop/src-tauri/src/workflow/: agent_workflow.rs  debounced_save.rs  llm_inference.rs  mod.rs  workflow_commands.rs  workflow_execution.rs
gluon-desktop/src-tauri/tests/: README.md  advanced_audit_tests.rs  analysis_tests.rs  cascade_integration_tests.rs  code_quality_tests.rs  commands_tests.rs  context_tests.rs  core_modules_tests.rs  integration_tests.rs  load_tests.rs  local_ai_tests.rs  matchers_tests.rs  parsers_tests.rs  security_tests.rs  test_helpers.rs  week3_mvp_integration_tests.rs
gluon-desktop/src-tauri/wix/: main.wxs
gluon-jetbrains/: BUILD_INSTRUCTIONS.md  CHANGELOG.md  QUICK_BUILD_GUIDE.md  README.md  build.gradle.kts  settings.gradle.kts
gluon-vs/: CHANGELOG.md  README.md  gluon-vs-0.0.1.vsix  gluon-vs-0.0.2.vsix  gluon-vs-0.0.3.vsix  gluon-vs-0.0.4.vsix  gluon-vs-0.0.5.vsix  gluon-vs-0.0.6.vsix  package-lock.json  package.json
gluon-vs/src/: extension.ts
gluon_context/: semantic_map_2026-02-15T11-19-03.md
(+75 files in other folders)
